--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,4 +5,5 @@
     android:name="com.example.a4800app.SongListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/MusePlayer"
     tools:context=".MainActivity" />
