--- a/app/src/main/res/menu/fragment_song_list.xml
+++ b/app/src/main/res/menu/fragment_song_list.xml
@@ -4,12 +4,9 @@
 
     <item
         android:id="@+id/app_bar_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:icon="@drawable/baseline_search_24"
         android:title="@+id/search"
         app:showAsAction="always"
-        />
+        app:actionViewClass="androidx.appcompat.widget.SearchView" />
 
     <item
         android:id="@+id/recommendations_button"
