--- a/app/src/main/res/layout/list_item_song.xml
+++ b/app/src/main/res/layout/list_item_song.xml
@@ -66,14 +66,13 @@
 
 
         <ImageButton
-            android:id="@+id/add_to_playlist"
+            android:id="@+id/edit_playlist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:background="#121212"
             android:src="@drawable/baseline_add_24"
             android:text="add to playlist"
-            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/recommendations_button"
             app:layout_constraintTop_toTopOf="parent" />
